[project]
name = "grove-find"
version = "1.0.0"
description = "Blazing fast codebase search for the Grove ecosystem"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
gf = "grove_find.cli:app"
grove-find = "grove_find.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grove_find"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
